--- a/WordPress-One/pages/copyright/copyright.wxml
+++ b/WordPress-One/pages/copyright/copyright.wxml
@@ -1,11 +1,7 @@
 <!--
-/*
- * 
- * WordPres 连接微信小程序
- * Author: 守望轩 + 小鱼(vPush) + 艾码汇
- * github:  https://github.com/dchijack/WordPress-One-MinAPP
- * 技术支持：https://www.imahui.com  微信公众号：WordPress(搜索微信号：WPGeek)
- * 
+/**
+ * Author : 丸子团队（波波、Chi、ONLINE.信）
+ * Github 地址: https://github.com/dchijack/WordPress-One-MinAPP
  */
 -->
 <import src="../../wxParse/wxParse.wxml"/>
@@ -41,8 +37,8 @@
       </view>
       <view class="wxParse-p">
         <view class="wxParse-xm">
-          <image class="wxParse-icon" src="/assets/jianbo.png"></image>
-          <text class="wxParse-text">守望轩</text>
+          <image class="wxParse-icon" src="/assets/code.png"></image>
+          <text class="wxParse-text">艾码汇</text>
           <image class="wxParse-icon" src="/assets/wxParse.png"></image>
           <text class="wxParse-text">wxParse</text>
         </view>
@@ -59,7 +55,7 @@
       </view>
       <view class="wxParse-p">
         <view class="wxParse-title">
-          <text>微时代小程序(weitimes.com)</text>
+          <text>丸子小程序(weitimes.com)</text>
         </view>
       </view>
     </view>
