--- a/WordPress-One/pages/copyright/copyright.wxss
+++ b/WordPress-One/pages/copyright/copyright.wxss
@@ -1,10 +1,6 @@
-/*
- * 
- * WordPres 连接微信小程序
- * Author: 守望轩 + 小鱼(vPush) + 艾码汇
- * github:  https://github.com/dchijack/WordPress-One-MinAPP
- * 技术支持：https://www.imahui.com  微信公众号：WordPress(搜索微信号：WPGeek)
- * 
+/**
+ * Author : 丸子团队（波波、Chi、ONLINE.信）
+ * Github 地址: https://github.com/dchijack/WordPress-One-MinAPP
  */
 @import "../../wxParse/wxParse.wxss";
 .wrapper{
