--- a/WordPress-One/pages/index/index.wxml
+++ b/WordPress-One/pages/index/index.wxml
@@ -1,11 +1,7 @@
 <!--
-/*
- * 
- * WordPres 连接微信小程序
- * Author: 守望轩 + 小鱼(vPush) + 艾码汇
- * github:  https://github.com/dchijack/WordPress-One-MinAPP
- * 技术支持：https://www.imahui.com  微信公众号：WordPress(搜索微信号：WPGeek)
- * 
+/**
+ * Author : 丸子团队（波波、Chi、ONLINE.信）
+ * Github 地址: https://github.com/dchijack/WordPress-One-MinAPP
  */
 -->
 
@@ -13,20 +9,20 @@
 <view class='topBar' style='padding-top:{{statusBarHeight}}px;background-color:rgba(3, 169, 244, {{opacity}});'>
   <!--左边按钮  -->
   <view class='loginButton' hover-class='hover-class'>
-    <image wx:if="{{userInfo == null || userInfo == ''}}" src='/assets/gavatar.png'></image>
-    <image wx:else src='{{userInfo.avatarUrl}}'></image>
-    <button class="login-button" open-type="getUserInfo" bindgetuserinfo="bindGetUserinfo"></button>
+    <image wx:if="{{user == null || user == ''}}" src='/assets/gavatar.png'></image>
+    <image wx:else src='{{user.avatarUrl}}'></image>
+    <button class="login-button" open-type="getUserInfo" bindgetuserinfo="getProfile"></button>
   </view>
   <!--中间标题  -->
   <view class='SiteApp'>
-    <text>{{title}}</text>
+    <text>{{siteInfo.name}}</text>
   </view>
   <!--右边间隙  -->
 </view>
 
 <!--加载中  -->
 <view class='loading-container' wx:if="{{loading}}">
-  <text class='loading-title'>微语录</text>
+  <text class='loading-title'>丸子小程序</text>
 </view>
 
 <scroll-view
@@ -37,14 +33,14 @@
   scroll-top="{{scrollTop}}"
   wx:else>
   <!--顶部图片  -->
-  <image wx:if="{{firstImage}}" src="{{firstImage}}" class="header-image"></image>
+  <image wx:if="{{siteInfo.cover}}" src="{{siteInfo.cover}}" class="header-image"></image>
   <image wx:else src="../../assets/default.png" class="header-image"></image>
   <!--顶部文字  -->
   <view class='header-text'>
-    <text>复杂的世界里，一个就够了</text>
+    <text>{{siteInfo.description}}</text>
   </view>
   <!--第一张卡片内容  -->
-  <block wx:for="{{postsList}}" wx:key="{{index}}">
+  <block wx:for="{{posts}}" wx:key="id">
   <view wx:if="{{index==0}}" class='first_card' hover-class='hover-class'>
       <button bindtap="redictDetail" id="{{item.id}}">
           <!--vol标题  -->
@@ -53,11 +49,11 @@
           </view>
           <!--内容  -->
           <view class='first_content_box'>
-            <text>{{item.content.rendered}}</text>
+            <text>{{item.excerpt.rendered}}</text>
           </view>
           <!--作者  -->
           <view class='first_author_box'>
-            <text>—— {{item.author}}</text>
+            <text>—— {{item.author.name}}</text>
           </view>
       </button>
   </view>
@@ -70,17 +66,18 @@
         </view>
         <!--内容  -->
         <view class='other_content_box'>
-          <text>{{item.content.rendered}}</text>
+          <text>{{item.excerpt.rendered}}</text>
         </view>
         <!--作者  -->
         <view class='other_author_box'>
-          <text>—— {{item.author}}</text>
+          <text>—— {{item.author.name}}</text>
         </view>
       </button>
   </view>
   </block>
-  <view hidden="{{isLastPage}}" class='more'>
-    <button class="more-button" formType="submit" size="mini" bindtap="loadMore">加载更多...</button>
+  <view class='more'>
+    <button class="more-button" formType="submit" size="mini" bindtap="reFresh">重新加载...</button>
+    <button wx:if="{{!isLastPage && posts.length > 0}}" class="more-button" formType="submit" size="mini" bindtap="loadMore">加载更多...</button>
   </view>
   <!--底部内容  -->
   <navigator url='/pages/copyright/copyright' class='footer' hover-class='hover-class'>
