--- a/WordPress-One/pages/index/index.wxss
+++ b/WordPress-One/pages/index/index.wxss
@@ -1,10 +1,6 @@
-/*
- * 
- * WordPres 连接微信小程序
- * Author: 守望轩 + 小鱼(vPush) + 艾码汇
- * github:  https://github.com/dchijack/WordPress-One-MinAPP
- * 技术支持：https://www.imahui.com  微信公众号：WordPress(搜索微信号：WPGeek)
- * 
+/**
+ * Author : 丸子团队（波波、Chi、ONLINE.信）
+ * Github 地址: https://github.com/dchijack/WordPress-One-MinAPP
  */
 
 .first_card {
@@ -113,20 +109,20 @@
   text-shadow: 2rpx 2rpx 1rpx #ddd;
 }
 .more{
-  margin: 0 280rpx;
+  display: flex;
+  margin-bottom:80rpx;
 }
 .more-button {
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
   font-size: 0.785714286rem;
   font-weight: normal;
   color: #959595;
   background-color: #FFF;
   background-repeat: repeat-x;
-  margin-top: 30rpx;
-  margin-bottom: 30rpx;
-  width: 200rpx;
-  margin-left:auto;
-  margin-right:auto;
-  border-radius: 300rpx;
+  border-radius: 40rpx;
 }
 .more-button::after {
   border: none;
